--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,8 @@ dependencies = [
     "beautifulsoup4>=4.12.0",
     "lxml>=5.0.0",
     "playwright>=1.40.0",
+    "python-dotenv>=1.0.0",
+    "huggingface_hub>=0.20.0",
 ]
 
 [project.scripts]
